hub/vpngw.tf
resource "azurerm_public_ip" "vpngw-pip" {
  name                = "${var.hub_prefix}-vpngw-pip"
  location            = azurerm_resource_group.Hub-resource-group.location
  resource_group_name = azurerm_resource_group.Hub-resource-group.name

  allocation_method = "Dynamic"
}

resource "azurerm_virtual_network_gateway" "vpngw" {
  name                = "${var.hub_prefix}-vpngw"
  location            = azurerm_resource_group.Hub-resource-group.location
  resource_group_name = azurerm_resource_group.Hub-resource-group.name

  type     = "Vpn"
  vpn_type = "RouteBased"

  active_active = false
  enable_bgp    = false
  sku           = "VpnGw2"
  generation = "Generation2"

  ip_configuration {
    name                          = "vpngw-config"
    public_ip_address_id          = azurerm_public_ip.vpngw-pip.id
    private_ip_address_allocation = "Dynamic"
    subnet_id                     = data.azurerm_subnet.gw_subnet.id
  }
/*
  vpn_client_configuration {
    address_space = ["10.2.0.0/24"]

    root_certificate {
      name = "DigiCert-Federated-ID-Root-CA"

      public_cert_data = <<EOF
MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn
[...]
EOF

    }

    revoked_certificate {
      name       = "Verizon-Global-Root-CA"
      thumbprint = "912198EEF23DCAC40939312FEE97DD560BAE49B1"
    }
  }
*/
}
